--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -68,7 +68,9 @@ jobs:
           host: ${{ secrets.SERVER_HOST }}
           username: ${{ secrets.SERVER_USER }}
           password: ${{ secrets.SSH_PASSWORD }}
-          script: | 
+          script: |
+            cd ${{ secrets.PROJECT_PATH }}
+            echo "${{ secrets.ENV_VARS }}" | tr ';' '\n' > .env
             git pull
             docker compose up -d --build
             docker system prune -fa
