--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -55,12 +55,13 @@ jobs:
 
   ruff:
     runs-on: ubuntu-latest
+    need: build-and-test
     steps:
       - uses: actions/checkout@v3
       - uses: chartboost/ruff-action@v1
         with:
           version: 0.2.0
-          args: [ --config, backend/ruff.toml ]
+          args: --config, backend/ruff.toml
 
   deploy:
     needs: build-and-test
