--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -55,7 +55,7 @@ jobs:
 
   ruff:
     runs-on: ubuntu-latest
-    need: build-and-test
+    needs: build-and-test
     steps:
       - uses: actions/checkout@v3
       - uses: chartboost/ruff-action@v1
