--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -61,7 +61,7 @@ jobs:
       - uses: chartboost/ruff-action@v1
         with:
           version: 0.2.0
-          args: --config, backend/ruff.toml
+          args: --config backend/ruff.toml
 
   deploy:
     needs: ruff
