--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -75,12 +75,10 @@ jobs:
           host: ${{ secrets.SERVER_HOST }}
           username: ${{ secrets.SERVER_USER }}
           password: ${{ secrets.SSH_PASSWORD }}
-          env:
-            ENVIRONMENT_NAME: ${{ (github.ref == 'refs/heads/develop') && 'test' || 'main' }}
           script: |
             cd ${{ secrets.PROJECT_PATH }}
             echo "${{ secrets.ENV_VARS }}" | tr ';' '\n' > .env
-            if [ "$ENVIRONMENT_NAME" = "test" ]; then
+            if [[ "${{ github.ref }}" == "refs/heads/develop" ]]; then
               git pull origin develop
             else
               git pull origin main
