test(composetest): тест конфига

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -73,8 +73,7 @@ services:
     restart: always
     volumes:
       - ./backend:/usr/src/app
-      - static_value:/usr/src/app/static/
-      - media_value:/usr/src/app/media/
+      - ./static:/usr/src/app/static/
       - ./media:/usr/src/app/media/
       - /var/run/docker.sock:/var/run/docker.sock
     <<: *default-environment
@@ -102,8 +101,7 @@ services:
     restart: always
     volumes:
       - ./backend:/usr/src/app
-      - static_value:/usr/src/app/static/
-      - media_value:/usr/src/app/media/
+      - ./static:/usr/src/app/static/
       - ./media:/usr/src/app/media/
     <<: *default-environment
     command: celery -A config worker -l error -E -c 2 -Q send_mail
@@ -119,8 +117,7 @@ services:
     restart: always
     volumes:
       - ./backend:/usr/src/app
-      - static_value:/usr/src/app/static/
-      - media_value:/usr/src/app/media/
+      - ./static:/usr/src/app/static/
       - ./media:/usr/src/app/media/
     <<: *default-environment
     command: celery -A config worker -l error -E -c 2 -Q send_many_mails
@@ -148,8 +145,7 @@ services:
     restart: always
     volumes:
       - ./backend:/usr/src/app
-      - static_value:/usr/src/app/static/
-      - media_value:/usr/src/app/media/
+      - ./static:/usr/src/app/static/
       - ./media:/usr/src/app/media/
       - /var/run/docker.sock:/var/run/docker.sock
     <<: *default-environment
@@ -173,12 +169,9 @@ services:
       - "80:80"
       - "443:443"
     volumes:
-      - static_value:/usr/src/app/static
-      - media_value:/usr/src/app/media
+      - ./static:/usr/src/app/static/
       - ./media:/usr/src/app/media/
 
 
 volumes:
   postgresql-data:
-  static_value:
-  media_value:
