--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -45,6 +45,8 @@ services:
       retries: 5
     ports:
       - 127.0.0.1:15432:5432
+    logging:
+      driver: journald
 
 
   pgbackups:
@@ -65,6 +67,8 @@ services:
       - POSTGRES_EXTRA_OPTS=-Z9 -E UTF-8 --schema=public --blobs
       - SCHEDULE=@weekly
       - BACKUP_KEEP_WEEKS=2
+    logging:
+      driver: journald
 
 
   backend:
@@ -81,6 +85,8 @@ services:
       postgres:
         condition: service_healthy
     command: sh -c /tmp/entrypoint.sh
+    logging:
+      driver: journald
 
 
   redis:
@@ -89,6 +95,8 @@ services:
     depends_on:
       - postgres
     restart: always
+    logging:
+      driver: journald
 
 
   celery_send_mails:
@@ -105,6 +113,8 @@ services:
       - ./media:/usr/src/app/media/
     <<: *default-environment
     command: celery -A config worker -l error -E -c 2 -Q send_mail
+    logging:
+      driver: journald
 
 
   celery_send_many_mails:
@@ -121,6 +131,8 @@ services:
       - ./media:/usr/src/app/media/
     <<: *default-environment
     command: celery -A config worker -l error -E -c 2 -Q send_many_mails
+    logging:
+      driver: journald
 
 
   flower:
@@ -137,6 +149,8 @@ services:
       - redis
       - celery_send_mails
     restart: always
+    logging:
+      driver: journald
 
 
   tgbot:
@@ -155,6 +169,8 @@ services:
     command: sh -c 'uvicorn apps.tgbot.fastapp:app --host 0.0.0.0 --port 5555 & python -m apps.tgbot.main'
     ports:
       - "5555:5555"
+    logging:
+      driver: journald
 
 
   nginx:
@@ -171,6 +187,8 @@ services:
     volumes:
       - ./static:/usr/src/app/static/
       - ./media:/usr/src/app/media/
+    logging:
+      driver: journald
 
 
 volumes:
