--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -190,6 +190,32 @@ services:
     logging:
       driver: journald
 
+  loki:
+    image: grafana/loki:latest
+    ports:
+      - "3100:3100"
+    command: -config.file=/etc/loki/local-config.yaml
+
+  grafana:
+    image: grafana/grafana
+    ports:
+      - "3000:3000"
+    depends_on:
+      - loki
+    environment:
+      GF_SECURITY_ADMIN_PASSWORD: ${FLOWER_PASS}
+    volumes:
+      - grafana_data:/var/lib/grafana
+
+  promtail:
+    image: grafana/promtail:latest
+    volumes:
+      - /var/log/journal:/var/log/journal:ro
+      - /etc/machine-id:/etc/machine-id:ro
+    command: -config.file=/etc/promtail/docker-config.yaml
+    depends_on:
+      - loki
 
 volumes:
   postgresql-data:
+  grafana_data:
