--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -192,28 +192,30 @@ services:
 
   loki:
     image: grafana/loki:latest
+    restart: always
     ports:
       - "3100:3100"
-    command: -config.file=/etc/loki/local-config.yaml
 
   grafana:
     image: grafana/grafana
+    restart: always
     expose:
       - 3000
     depends_on:
       - loki
     environment:
       GF_SECURITY_ADMIN_PASSWORD: ${FLOWER_PASS}
-      GF_SERVER_ROOT_URL: "${DNS}/grafana"
     volumes:
       - grafana_data:/var/lib/grafana
 
   promtail:
-    image: grafana/promtail:latest
+    build: ./promtail
+    restart: always
     volumes:
       - /var/log/journal:/var/log/journal:ro
       - /etc/machine-id:/etc/machine-id:ro
-    command: -config.file=/etc/promtail/docker-config.yaml
+    command:
+      - '-config.file=/promtail.yml'
     depends_on:
       - loki
 
