--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -83,6 +83,6 @@ jobs:
             else
               git pull origin main
             fi
-            docker compose up -d --build
+            docker compose up -d --build --remove-orphans
             sleep 30
             docker system prune -fa
