--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -41,7 +41,7 @@ http {
       proxy_http_version 1.1;
     }
 
-    location ~ ^/grafana/ {
+    location ~ ^/grafana/? {
       rewrite ^/grafana/?(.*)$ /$1 break;
 
       sub_filter '="/' '="/grafana/';
