--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -41,19 +41,8 @@ http {
       proxy_http_version 1.1;
     }
 
-    location ~ ^/grafana/? {
-      rewrite ^/grafana/?(.*)$ /$1 break;
-
-      sub_filter '="/' '="/grafana/';
-      sub_filter_last_modified on;
-      sub_filter_once off;
-
+    location /grafana/ {
       proxy_pass http://grafana:3000;
-      proxy_redirect off;
-      proxy_set_header Host $host;
-      proxy_set_header Upgrade $http_upgrade;
-      proxy_set_header Connection "upgrade";
-      proxy_http_version 1.1;
     }
 
     location /static/ {
