--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -41,8 +41,13 @@ http {
       proxy_http_version 1.1;
     }
 
-    location /grafana/ {
+    location ~ ^/grafana/? {
       proxy_pass http://grafana:3000;
+      proxy_redirect off;
+      proxy_set_header Host $host;
+      proxy_set_header Upgrade $http_upgrade;
+      proxy_set_header Connection "upgrade";
+      proxy_http_version 1.1;
     }
 
     location /static/ {
