--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -257,6 +257,7 @@ services:
 
   promtail:
     image: grafana/promtail:latest
+    container_name: promtail
     build: ./promtail
     volumes:
       - /var/log/journal:/var/log/journal:ro
