--- a/promtail/promtail.yml
+++ b/promtail/promtail.yml
@@ -14,11 +14,42 @@ scrape_configs:
       path: /var/log/journal
       labels:
         job: systemd-journal
+    pipeline_stages:
+    - match:
+        action: drop
+        selector: '{job="systemd-journal", unit!~"docker.service"}'
+    - match:
+        selector: '{identifier="backend"}'
+        stages:
+          - json:
+              expressions:
+                request_method: method
+                status_code: status
+                request_path: path
+          - labels:
+              request_method:
+              status_code:
+              request_path:
+          - match:
+              selector: '{request_path!=""}'
+              stages:
+                - replace:
+                    source: request_path
+                    expression: '^.*?\/(\d+)\/.*$'
+                    replace: '<id>'
+                - replace:
+                    source: request_path
+                    expression: '^.*?\/([a-z0-9]{8}-[a-z0-9]{4}-[a-z0-9]{4}-[a-z0-9]{4}-[a-z0-9]{12})\/.*$'
+                    replace: '<uid>'
+                - replace:
+                    expression: '(\})$'
+                    replace: ',"request_group":"{{ .request_path }}"}'
+          - labeldrop:
+              - request_path
     relabel_configs:
-      - source_labels: ['__journal__systemd_unit']
-        target_label: 'unit'
-      - source_labels: ['__journal__syslog_identifier']
-        target_label: 'identifier'
-      - regex: '.+'
-        source_labels: ['__journal__message']
-        target_label: 'container_name'
+    - source_labels:
+      - __journal__systemd_unit
+      target_label: unit
+    - source_labels:
+      - __journal_syslog_identifier
+      target_label: identifier
