--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -50,8 +50,8 @@ jobs:
 
       - name: Build Docker images and run tests
         run: |
-          docker-compose -f docker-compose.yaml build
-          docker-compose -f docker-compose.yaml -f docker-compose.test.yaml run --rm backend /bin/sh -c "python manage.py test -v3 --noinput"
+          docker compose -f docker-compose.yaml build
+          docker compose -f docker-compose.yaml -f docker-compose.test.yaml run --rm backend /bin/sh -c "python manage.py test -v3 --noinput"
 
   ruff:
     runs-on: ubuntu-latest
