--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -26,29 +26,29 @@ http {
       proxy_pass  http://backend:8000;
     }
 
-    location ~ ^/hushflower/? {
-      rewrite ^/hushflower/?(.*)$ /$1 break;
-
-      sub_filter '="/' '="/hushflower/';
-      sub_filter_last_modified on;
-      sub_filter_once off;
-
-      proxy_pass http://flower:6666;
-      proxy_redirect off;
-      proxy_set_header Host $host;
-      proxy_set_header Upgrade $http_upgrade;
-      proxy_set_header Connection "upgrade";
-      proxy_http_version 1.1;
-    }
-
-    location ~ ^/grafana/? {
-      proxy_pass http://grafana:3000;
-      proxy_redirect off;
-      proxy_set_header Host $host;
-      proxy_set_header Upgrade $http_upgrade;
-      proxy_set_header Connection "upgrade";
-      proxy_http_version 1.1;
-    }
+;     location ~ ^/hushflower/? {
+;       rewrite ^/hushflower/?(.*)$ /$1 break;
+;
+;       sub_filter '="/' '="/hushflower/';
+;       sub_filter_last_modified on;
+;       sub_filter_once off;
+;
+;       proxy_pass http://flower:6666;
+;       proxy_redirect off;
+;       proxy_set_header Host $host;
+;       proxy_set_header Upgrade $http_upgrade;
+;       proxy_set_header Connection "upgrade";
+;       proxy_http_version 1.1;
+;     }
+;
+;     location ~ ^/grafana/? {
+;       proxy_pass http://grafana:3000;
+;       proxy_redirect off;
+;       proxy_set_header Host $host;
+;       proxy_set_header Upgrade $http_upgrade;
+;       proxy_set_header Connection "upgrade";
+;       proxy_http_version 1.1;
+;     }
 
     location /static/ {
       root $ROOT_DIR;
